egui_commonmark_macros/tests/fail/incorrect_immutable.stderr
error[E0308]: mismatched types
 --> tests/fail/incorrect_immutable.rs:7:25
  |
7 |         commonmark!(ui, &cache, "# Hello");
  |         ----------------^^^^^^------------
  |         |               |
  |         |               types differ in mutability
  |         arguments to this function are incorrect
  |
  = note: expected mutable reference `&mut CommonMarkCache`
                     found reference `&CommonMarkCache`
note: function defined here
 --> $WORKSPACE/egui_commonmark_backend/src/misc.rs
  |
  | pub fn prepare_show(cache: &mut CommonMarkCache, ctx: &egui::Context) {
  |        ^^^^^^^^^^^^
